--- a/app/src/main/res/layout/activity_home_page_student.xml
+++ b/app/src/main/res/layout/activity_home_page_student.xml
@@ -26,10 +26,11 @@
             android:contentInsetStart="16dp">
         <ImageView
             android:id="@+id/top_image"
-            android:layout_width="270dp"
+            android:layout_width="200dp"
             android:layout_height="100dp"
             android:src="@drawable/fdalogo"
             android:scaleType="fitCenter"
+            android:layout_marginStart="40dp"
             android:layout_centerHorizontal="true"
             android:adjustViewBounds="true"
             android:layout_alignTop="@id/toolbarr"/>
