--- a/app/src/main/res/layout/fragment_profile___vendor.xml
+++ b/app/src/main/res/layout/fragment_profile___vendor.xml
@@ -1,14 +1,128 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile_Fragment_Vendor">
+    android:padding="16dp"
+    android:orientation="vertical"
+    android:background="@drawable/fgprofile">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- CardView for Profile Details -->
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="180dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="5dp">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="450dp"
+            android:orientation="vertical"
+            android:padding="20dp">
+
+            <EditText
+                android:id="@+id/name_v"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="20dp"
+                android:layout_height="48dp"
+                android:background="@android:drawable/editbox_background"
+                android:layout_marginStart="20dp"
+                android:hint="NAME"
+                android:padding="10dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="10dp"/>
+
+            <EditText
+                android:id="@+id/email_v"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="E-MAIL"
+                android:background="@android:drawable/editbox_background"
+                android:padding="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="10dp"/>
+
+            <EditText
+                android:id="@+id/phone_v"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="PHONE NO"
+                android:background="@android:drawable/editbox_background"
+                android:padding="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="10dp"/>
+            <EditText
+                android:id="@+id/shopname_v"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="SHOP NAME"
+                android:background="@android:drawable/editbox_background"
+                android:padding="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="10dp"/>
+
+
+        </LinearLayout>
+
+        <!-- Buttons Section -->
+        <Button
+            android:id="@+id/change_pass_btn_v"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Change Password"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/purple_200"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="250dp"/>
+
+        <Button
+            android:id="@+id/edit_profile_btn_v"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
+            android:text="Edit Profile"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/purple_200"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="310dp"/>
+
+        <Button
+            android:id="@+id/save_btn_v"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Save Changes"
+            android:textSize="20sp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/purple_200"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="370dp"/>
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
