--- a/app/src/main/res/layout/activity_home_page_vendor.xml
+++ b/app/src/main/res/layout/activity_home_page_vendor.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomePage_Student">
+    tools:context=".HomePageVendor">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,9 +15,11 @@
 
         <!-- FrameLayout to Stack Image over Toolbar -->
         <FrameLayout
+            android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            tools:ignore="InvalidId">
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
@@ -93,8 +95,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nevigation_drawer_menu_vendor"/>
 
