--- a/app/src/main/res/layout/fragment_dashboard__vendor.xml
+++ b/app/src/main/res/layout/fragment_dashboard__vendor.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".Dashboard_Fragment_vendor">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/category_btn"
+        android:layout_width="207dp"
+        android:layout_height="252dp"
+        android:layout_marginTop="30dp"
+        android:text="Category"
+        />
 
 </FrameLayout>
