--- a/app/src/main/res/layout/activity_shops_address.xml
+++ b/app/src/main/res/layout/activity_shops_address.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.418" />
 
-    <TextView
+    <EditText
         android:id="@+id/address_vendor"
         android:layout_width="303dp"
         android:layout_height="65dp"
@@ -31,6 +31,7 @@
         android:hint="Add Address"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
