--- a/app/src/main/res/layout/fragment__home_student.xml
+++ b/app/src/main/res/layout/fragment__home_student.xml
@@ -4,141 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment_HomeStudent">
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <!-- Search Bar -->
         <EditText
+            android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/search_box"
             android:elevation="3dp"
             android:layout_margin="8dp"
             android:drawableLeft="@drawable/baseline_contentsearch_24"
             android:padding="13dp"
             android:hint="Search Your Item Here...."
-            android:drawablePadding="5dp"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal"
-            android:weightSum="2">
-            
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Popular Products"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-            
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/view_all_popular"
-                android:layout_weight="1"
-                android:text="View All"
-                android:layout_marginLeft="40dp"
-                android:layout_gravity="end"
-                android:layout_marginRight="7dp"
-                android:textSize="16sp"
-                android:textColor="@color/purple_700"
-                />
+            android:drawablePadding="5dp"/>
 
-                
-        </LinearLayout>
+        <!-- Popular Products Section -->
+
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pop_rec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:id="@+id/pop_rec"/>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Explore Products"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/view_all_explore"
-                android:layout_weight="1"
-                android:text="View All"
-                android:layout_gravity="end"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="40dp"
-                android:textSize="16sp"
-                android:textColor="@color/purple_700"
-                />
-
-
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:id="@+id/explore_rec"/>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Recommended Products"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/view_all_recommneded"
-                android:layout_weight="1"
-                android:text="View All"
-                android:layout_marginLeft="40dp"
-                android:layout_gravity="end"
-                android:layout_marginRight="7dp"
-                android:textSize="16sp"
-                android:textColor="@color/purple_700"
-                />
-
-
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:id="@+id/recommended_rec"/>
+            android:layout_margin="5dp"/>
     </LinearLayout>
 
 </ScrollView>
