--- a/app/src/main/res/layout/fragment_logout___vendor.xml
+++ b/app/src/main/res/layout/fragment_logout___vendor.xml
@@ -18,9 +18,9 @@
     <!-- Button for logging out -->
     <Button
         android:id="@+id/logout_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:layout_marginTop="20dp" />
+        android:layout_width="150dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="20dp"
+        android:text="Logout" />
 
 </LinearLayout>
