--- a/app/src/main/res/layout/fragment__profile_student.xml
+++ b/app/src/main/res/layout/fragment__profile_student.xml
@@ -1,6 +1,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -123,5 +124,17 @@
             android:textColor="@android:color/white"
             android:layout_marginTop="370dp"/>
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/logout_button_stu"
+        android:layout_width="360dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="Logout"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
