--- a/app/src/main/res/layout/fragment_faq_student.xml
+++ b/app/src/main/res/layout/fragment_faq_student.xml
@@ -14,4 +14,12 @@
         android:gravity="center"
         android:textColor="@color/white"/>
 
+    <Button
+        android:id="@+id/faqbtn"
+        android:layout_width="149dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="27dp"
+        android:text="FAQ" />
+
 </FrameLayout>
