--- a/app/src/main/res/layout/fragment_myorder_student.xml
+++ b/app/src/main/res/layout/fragment_myorder_student.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment_myorderStudent">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_my_orders"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="My Orders"
-        android:textSize="36sp"
-        android:gravity="center"
-        android:textColor="@color/white"/>
+        android:scrollbars="vertical"/>
 
-</FrameLayout>
+</LinearLayout>
